# tauri-svelte-test

./: README.md  package-lock.json  package.json
markdown-editor/: package-lock.json  package.json
markdown-editor/src/: App.svelte
markdown-editor/src-tauri/: Cargo.toml  tauri.conf.json
markdown-editor/src-tauri/src/: lib.rs
markdown-editor/src/lib/: Settings.svelte  TextAnalysis.svelte
src/: App.svelte  app-logic.ts
src-tauri/: tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/lib/: Settings.svelte  TextAnalysis.svelte
